--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "axios": "^1.11.0",
-    "expo": "53.0.22",
+    "expo": "~53.0.26",
     "expo-application": "~6.1.5",
     "expo-constants": "^17.1.7",
     "expo-crypto": "^15.0.7",
@@ -26,7 +26,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
