--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "ZENITH",
-    "slug": "ZENITH-WMS-APP",
+    "slug": "ZENITH-BASE-APP",
     "version": "1.0.16",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,7 +24,7 @@
         "monochromeImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.robertocjunior.zenithwms",
+      "package": "com.robertocjunior.base.zenithwms",
       "userInterfaceStyle": "automatic",
       "versionCode": 3,
       "usesCleartextTraffic": true
